2010-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28516: Linux/Dragon: Error message on exit
	* stk500v2.c: Fix the "bad response to GO command:
	RSP_ILLEGAL_EMULATOR_MODE" message.  jtagmkII_close()
	has been called with the wrong pgm->cookie.  Wrap it
	inside stk500v2_jtagmkII_close(), adjusting the cookie
	data appropriately.

2010-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Doug:
	patch #7010: Win32 enhanced bitbang_delay
	* bitbang.c (bitbang_calibrate_delay, bitbang_delay): On Win32,
	use the high-resolution performance counter rather than the
	uneducated delay loop guess if it is available on the target
	hardware.

2010-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Gerard:
	patch #6828: Using arbitrary BAUD rates
	* ser_posix.c (serial_baud_lookup): Allow non-standard baud
	rates.
	* ser_win32.c (serial_baud_lookup): (Dito.)

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Eric Trein:
	bug #27596: AT90s2333 is not correctly supported in avrdude.conf
	* avrdude.conf.in (at90s2333): add various STK500v2 parameters.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Gyorgy Szekely:
	bug #28458: Buffer line is incorrectly released for PP programmers
	* par.c (par_close): use par_setmany() rather than par_setpin()
	for PPI_AVR_BUFF.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lukasz Goralczyk:
	bug #27507: SIGSEGV when using avrdragon (avrdude 5.8)
	* stk500v2.c (stk500v2_dragon_isp_initpgm): Use
	stk500v2_jtagmkII_setup/stk500v2_jtagmkII_rather than their
	jtagII counterparts, to get the private data properly
	initialized.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Cosmetics: remove UTF-8 dashes, adjust for 8-column
	hard tabs.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: add $ Id $ line.
	* buspirate.h: add $ Id $ line.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
